<resources>
    <string name="app_name">Labeleven</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="laboratory_label">Chemical Laboratory</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="enter">Sign in</string>
    <string name="have_no_account_yet">I have no account</string>
    <string name="add_element">Add element</string>
    <string name="add">Add</string>
    <string name="element_number">Element number</string>
    <string name="mnemonic_name">Mnemonic name</string>
    <string name="is_base">Is base</string>
    <string name="add_melting">Add melting</string>
    <string name="brand_code">Brand code</string>
    <string name="worker_code">Worker code</string>
    <string name="department_code">Department code</string>
    <string name="oven_code">Oven code</string>
    <string name="quantity">Quantity</string>
    <string name="note">Note</string>
    <string name="date">Date</string>
    <string name="elements">Elements</string>
    <string name="add_employee">Add employee</string>
    <string name="employee_name">Employee name</string>
    <string name="register_melting">Register melting</string>
    <string name="logout">Logout</string>
    <string name="staff_list">Staff list</string>
    <string name="oven_list">Ovens list</string>
    <string name="staff_management">Staff management</string>
    <string name="reports">Reports</string>
    <string name="departments_management">Departments management</string>
    <string name="chief_code">Chief code:</string>
    <string name="departments">Departments</string>
    <string name="melting">Melting</string>
    <string name="melting_number">Melting number</string>
    <string name="melting_number_label">Melting number:</string>
    <string name="melting_brand_code">Melting brand code:</string>
    <string name="worker_code_label">Worker code:</string>
    <string name="department_code_label">Department code:</string>
    <string name="oven_code_label">Oven code:</string>
    <string name="date_label">Date:</string>
    <string name="quantity_label">Quantity:</string>
    <string name="note_label">Note:</string>
    <string name="text_template">40 правил настоящей педовки. (с) Lurkmore Знай, ты брутальна! В твоём нике должны быть «ХхХ» (хоть ты и не sXe, всё равно Х в нике — это модно и круто). Также должны присутствовать такие слова, как — Brutal, Grindcore, Deathcore, Mathcore, (всё равно ты не слушаешь такое, но звучит круто) и Trash и Porno. + приписки супер модных стильных брутальных групп типа [BT] [DE] [Bea.Tra.C] [x-sive] [BH] [CS] [http://lurkmore.ru/Amatory|[AMATORY]]. И желательно чем больше, тем лучше!Так же можно вместо имени написать Масюшка а вместо фамилии Любимка, а в нике лаффмасюшку.</string>
    <string name="first_report">The average value of each of the components of the chemical element of the steel grade</string>
    <string name="second_report">List of steel grades produced in the \"I-th\" month</string>
    <string name="third_report">The number of swimming trunks analyzed monthly in the current year</string>
    <string name="fourth_report">Summary of the melting of the \"I-th\" division for the \"j-th\" month</string>
    <string name="fifth_report">What chemical elements were present in the form of impurities in the \"I-th\" melting</string>
    <string name="sixth_report">How much of each of the steel grades was smelted this year</string>
    <string name="name_label">Name:</string>
    <string name="dismiss">Dismiss</string>
    <string name="i_forgot_password">I forgot password</string>
    <string name="edit_component_melting">Edit component melting</string>
    <string name="edit_impurity_melting">Edit impurity melting</string>
    <string name="worker">Worker</string>
    <string name="impurity_melting">Impurity melting editing</string>
    <string name="edit">Edit</string>
    <string name="component_melting_editing">Component melting editing</string>
    <string name="meltings_list">Melting management</string>
    <string name="department_chief">Department chief</string>
    <string name="director">Director</string>

    <string name="dismiss_employee">Dismiss employee</string>
    <string name="get_report">Get report</string>
    <string name="month">Month</string>
</resources>