<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mainmenu.DepartmentChiefMainMenuFragment">

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xxlarge_margin"
        android:textStyle="bold"
        android:text="@string/department_chief"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/staff_view_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/regular_margin"
        android:layout_marginTop="@dimen/xxlarge_margin"
        android:layout_marginEnd="@dimen/regular_margin"
        android:enabled="true"
        android:letterSpacing="0"
        android:paddingVertical="@dimen/small_padding"
        android:text="@string/staff_management"
        android:textAllCaps="false"
        android:textSize="@dimen/registration_button_text_size"
        app:cornerRadius="@dimen/registration_buttons_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/oven_view_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/regular_margin"
        android:layout_marginTop="@dimen/regular_margin"
        android:layout_marginEnd="@dimen/regular_margin"
        android:enabled="true"
        android:letterSpacing="0"
        android:paddingVertical="@dimen/small_padding"
        android:text="@string/oven_list"
        android:textAllCaps="false"
        android:textSize="@dimen/registration_button_text_size"
        app:cornerRadius="@dimen/registration_buttons_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/staff_view_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/meltings_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/regular_margin"
        android:layout_marginTop="@dimen/regular_margin"
        android:layout_marginEnd="@dimen/regular_margin"
        android:enabled="true"
        android:letterSpacing="0"
        android:paddingVertical="@dimen/small_padding"
        android:text="@string/meltings_list"
        android:textAllCaps="false"
        android:textSize="@dimen/registration_button_text_size"
        app:cornerRadius="@dimen/registration_buttons_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oven_view_button" />

    <TextView
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/logout"
        android:textColor="#A32824"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>