<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.authorization.AuthorizationFragment">



    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xxlarge_margin"
        android:text="@string/laboratory_label"
        android:textSize="24sp"
        app:fontFamily="@font/inter_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/regular_margin"
            android:layout_marginTop="@dimen/xxlarge_margin"
            android:layout_marginEnd="@dimen/regular_margin"
            android:backgroundTint="@color/wp_edit_text_underline_color"
            android:hint="@string/login"
            android:textSize="14sp"
            app:backgroundTint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_edit_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_text_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/regular_margin"
            android:layout_marginTop="@dimen/medium_large_margin"
            android:layout_marginEnd="@dimen/regular_margin"
            android:backgroundTint="@color/wp_edit_text_underline_color"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHighlight="#CBCBCB"
            android:textSize="14sp"
            app:backgroundTint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/regular_margin"
        android:layout_marginTop="@dimen/medium_large_margin"
        android:layout_marginEnd="@dimen/regular_margin"
        android:enabled="true"
        android:letterSpacing="0"
        android:paddingVertical="@dimen/small_padding"
        android:text="@string/enter"
        android:textAllCaps="false"
        android:textSize="@dimen/registration_button_text_size"
        app:cornerRadius="@dimen/registration_buttons_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text_layout" />

    <TextView
        android:id="@+id/have_no_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/regular_margin"
        android:text="@string/have_no_account_yet"
        app:layout_constraintEnd_toEndOf="@id/continue_button"
        app:layout_constraintTop_toBottomOf="@id/continue_button" />

</androidx.constraintlayout.widget.ConstraintLayout>